# The_evil_that_men_do

./: README.md
BfK/: build.gradle  settings.gradle
BfK/BFK javadoc/: Main.html  Operators.html  allclasses-index.html  allclasses.html  allpackages-index.html  constant-values.html  deprecated-list.html  element-list  help-doc.html  index.html  member-search-index.js  overview-summary.html  overview-tree.html  package-search-index.js  package-summary.html  package-tree.html  type-search-index.js
Bittorrent/: settings.gradle
Bittorrent/Seed/: test.png.torrent
Game_of_life/: Game_of_life.pro  base_game.cpp  base_game.h  game_widget.cpp  game_widget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
Lab3/DHT Javadoc/: Client.html  Connection.html  Peer.html  Server.html  allclasses-index.html  allclasses.html  allpackages-index.html  constant-values.html  deprecated-list.html  help-doc.html  index.html  member-search-index.js  overview-tree.html  package-summary.html  package-tree.html  type-search-index.js
Lab3/src/: config.xml
New_torrent/: groove.mp4.torrent  music.flac.torrent  settings.gradle  test.jpg.torrent  test.png.torrent
SnakeJFX/: build.gradle  settings.gradle
lab1/: CMakeLists.txt  flatmap.cpp  flatmap.h  main.cpp
lab2/: CMakeLists.txt  arg_parser.cpp  arg_parser.h  controller.cpp  controller.h  cooperate.cpp  cooperate.h  detailed.cpp  detailed.h  factory.h  fast.cpp  fast.h  impostor.cpp  impostor.h  main.cpp  random.cpp  random.h  score_table.cpp  score_table.h  strategy.h  tests.cpp  tit4tat.cpp  tit4tat.h  tournament.cpp  tournament.h
(+93 files in other folders)
